--- a/web_backend/src/web_backend.Blazor.Client/wwwroot/index.html
+++ b/web_backend/src/web_backend.Blazor.Client/wwwroot/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>VSS Application</title>
-    <base href="/" />
+    <base href="https://salmon-glacier-08dca301e.6.azurestaticapps.net/" />
 
     <!--ABP:Styles-->
     <link href="global.css" rel="stylesheet"/>
