--- a/web_backend/src/web_backend.Blazor.Client/wwwroot/index.html
+++ b/web_backend/src/web_backend.Blazor.Client/wwwroot/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>VSS Application</title>
-    <base href="https://salmon-glacier-08dca301e.6.azurestaticapps.net/" />
+    <base href="/" />
 
     <!--ABP:Styles-->
-    <link href="global.css" rel="stylesheet"/>
-    <link href="main.css" rel="stylesheet"/>
+    <link href="global.css" rel="stylesheet" />
+    <link href="main.css" rel="stylesheet" />
     <!--/ABP:Styles-->
 
-    <link href="web_backend.Blazor.Client.styles.css" rel="stylesheet"/>
+    <link href="web_backend.Blazor.Client.styles.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
     <link href="css/vss.css" rel="stylesheet" />
