--- a/web_backend/src/web_backend.Blazor.Client/wwwroot/index.html
+++ b/web_backend/src/web_backend.Blazor.Client/wwwroot/index.html
@@ -17,6 +17,7 @@
     <link href="css/vss.css" rel="stylesheet" />
 
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+    <script src="js/videoPlayer.js"></script>
     <script src="js/hlsPlayer.js"></script>
     <script src="js/notifications.js"></script>
 </head>
