--- a/web_backend/src/web_backend.Blazor.Client/wwwroot/index.html
+++ b/web_backend/src/web_backend.Blazor.Client/wwwroot/index.html
@@ -20,6 +20,7 @@
     <script src="js/videoPlayer.js"></script>
     <script src="js/hlsPlayer.js"></script>
     <script src="js/notifications.js"></script>
+    <script src="js/auth.js"></script>
 </head>
 <body class="abp-application-layout bg-light">
     <div id="app">
