--- a/web_backend/src/web_backend.Blazor.Client/wwwroot/index.html
+++ b/web_backend/src/web_backend.Blazor.Client/wwwroot/index.html
@@ -1,37 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>VSS Application</title>
-    <base href="/" />
+    <title>Varsity Sports Show</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!--ABP:Styles-->
-    <link href="global.css" rel="stylesheet" />
-    <link href="main.css" rel="stylesheet" />
-    <!--/ABP:Styles-->
-
-    <link href="web_backend.Blazor.Client.styles.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <!-- ----  STYLES  ---- -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-ENjdO4Dr2bkBIFxQpeo1JpX05Jb9IY9fGkN2NKc0N0iKJv9zY8txFPa61iBr+1" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="css/vss.css" rel="stylesheet" />
+    <link href="styles/vss-styles.css" rel="stylesheet" />
 
-    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+    <!-- Add any other static <link> tags here -->
+
+    <base href="/" />
+</head>
+<body>
+    <div id="app">Loading…</div>
+
+    <!-- ----  SCRIPTS  ---- -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-q2ky7L2e1N2f5wJWnZ9d1k0yQ5knhk+0CA8DmFumiQJ5AZt0fjOEtCQX2uq/6UXL"
+            crossorigin="anonymous"></script>
+
     <script src="js/hlsPlayer.js"></script>
     <script src="js/notifications.js"></script>
-</head>
-<body class="abp-application-layout bg-light">
-    <div id="app">
-        <div class="spinner">
-            <div class="double-bounce1"></div>
-            <div class="double-bounce2"></div>
-        </div>
-    </div>
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 
     <script src="_framework/blazor.webassembly.js"></script>
-
-    <!--ABP:Scripts-->
-    <script src="global.js"></script>
-    <!--/ABP:Scripts-->
 </body>
 </html>
