Enhance logout process and livestream key generation
- Made `LogoutClick` asynchronous and added token clearing.
- Updated `GenerateLivestreamKey` to use HTTPS and store ID.
- Added script reference for `logouthelper.js` in `index.html`.
- Introduced `authHelpers` object with `clearAuthTokens` method.

--- a/web_backend/src/web_backend.Blazor.Client/wwwroot/index.html
+++ b/web_backend/src/web_backend.Blazor.Client/wwwroot/index.html
@@ -19,6 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <script src="js/hlsPlayer.js"></script>
     <script src="js/notifications.js"></script>
+    <script src="js/logouthelper.js"></script>
 </head>
 <body class="abp-application-layout bg-light">
     <div id="app">
